crates/pg_syntax/tests/snapshots/postgres_regress/join@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT *\n  FROM J1_TBL AS t1 (a, b, c);"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Newline@8..9 "\n"
  Whitespace@9..11 "  "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeVar@16..37
    Ident@16..22 "J1_TBL"
    Whitespace@22..23 " "
    Alias@23..37
      As@23..25 "AS"
      Whitespace@25..26 " "
      Ident@26..28 "t1"
      Whitespace@28..29 " "
      Ascii40@29..30 "("
      Ident@30..31 "a"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      Ident@33..34 "b"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      Ident@36..37 "c"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

