crates/pg_syntax/tests/snapshots/postgres_regress/join@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT *\n  FROM J1_TBL t1 (a, b, c);"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Newline@8..9 "\n"
  Whitespace@9..11 "  "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeVar@16..34
    Ident@16..22 "J1_TBL"
    Whitespace@22..23 " "
    Alias@23..34
      Ident@23..25 "t1"
      Whitespace@25..26 " "
      Ascii40@26..27 "("
      Ident@27..28 "a"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      Ident@30..31 "b"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      Ident@33..34 "c"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

