crates/pg_syntax/tests/snapshots/postgres_regress/join@309.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function mki4(int) returns int4_tbl as\n$$select row($1)::int4_tbl$$ language sql;"
---
CreateFunctionStmt@0..88
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..20 "mki4"
  Ascii40@20..21 "("
  FunctionParameter@21..24
    TypeName@21..24
      IntP@21..24 "int"
  Ascii41@24..25 ")"
  Whitespace@25..26 " "
  Returns@26..33 "returns"
  Whitespace@33..34 " "
  TypeName@34..42
    Ident@34..42 "int4_tbl"
  Whitespace@42..43 " "
  DefElem@43..74
    As@43..45 "as"
    Newline@45..46 "\n"
    List@46..74
      Sconst@46..74 "$$select row($1)::int ..."
  Whitespace@74..75 " "
  DefElem@75..87
    Language@75..83 "language"
    Whitespace@83..84 " "
    SqlP@84..87 "sql"
  Ascii59@87..88 ";"

