crates/pg_syntax/tests/snapshots/postgres_regress/join@311.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from mki8(1,2);"
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..22
    List@14..22
      FuncCall@14..22
        Ident@14..18 "mki8"
        Ascii40@18..19 "("
        AConst@19..20
          Iconst@19..20 "1"
        Ascii44@20..21 ","
        AConst@21..22
          Iconst@21..22 "2"
  Ascii41@22..23 ")"
  Ascii59@23..24 ";"

