crates/pg_syntax/tests/snapshots/postgres_regress/join@313.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select * from mki4(42);
---
SelectStmt@0..23
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..21
    List@14..21
      FuncCall@14..21
        Ident@14..18 "mki4"
        Ascii40@18..19 "("
        AConst@19..21
          Iconst@19..21 "42"
  Ascii41@21..22 ")"
  Ascii59@22..23 ";"

