crates/pg_syntax/tests/snapshots/postgres_regress/join@322.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select count(*) from\n  tenk1 a join tenk1 b on a.unique1 = b.unique2\n  left join tenk1 c on a.unique2 = b.unique1 and c.thousand = a.thousand\n  join int4_tbl on b.thousand = f1;"
---
SelectStmt@0..177
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "from"
  Newline@20..21 "\n"
  Whitespace@21..23 "  "
  JoinExpr@23..176
    JoinExpr@23..141
      JoinExpr@23..68
        RangeVar@23..30
          Ident@23..28 "tenk1"
          Whitespace@28..29 " "
          Alias@29..30
            Ident@29..30 "a"
        Whitespace@30..31 " "
        Join@31..35 "join"
        Whitespace@35..36 " "
        RangeVar@36..43
          Ident@36..41 "tenk1"
          Whitespace@41..42 " "
          Alias@42..43
            Ident@42..43 "b"
        Whitespace@43..44 " "
        On@44..46 "on"
        Whitespace@46..47 " "
        AExpr@47..68
          ColumnRef@47..56
            Ident@47..48 "a"
            Ascii46@48..49 "."
            Ident@49..56 "unique1"
          Whitespace@56..57 " "
          Ascii61@57..58 "="
          Whitespace@58..59 " "
          ColumnRef@59..68
            Ident@59..60 "b"
            Ascii46@60..61 "."
            Ident@61..68 "unique2"
      Newline@68..69 "\n"
      Whitespace@69..71 "  "
      Left@71..75 "left"
      Whitespace@75..76 " "
      Join@76..80 "join"
      Whitespace@80..81 " "
      RangeVar@81..88
        Ident@81..86 "tenk1"
        Whitespace@86..87 " "
        Alias@87..88
          Ident@87..88 "c"
      Whitespace@88..89 " "
      On@89..91 "on"
      Whitespace@91..92 " "
      BoolExpr@92..141
        AExpr@92..113
          ColumnRef@92..101
            Ident@92..93 "a"
            Ascii46@93..94 "."
            Ident@94..101 "unique2"
          Whitespace@101..102 " "
          Ascii61@102..103 "="
          Whitespace@103..104 " "
          ColumnRef@104..113
            Ident@104..105 "b"
            Ascii46@105..106 "."
            Ident@106..113 "unique1"
        Whitespace@113..114 " "
        And@114..117 "and"
        Whitespace@117..118 " "
        AExpr@118..141
          ColumnRef@118..128
            Ident@118..119 "c"
            Ascii46@119..120 "."
            Ident@120..128 "thousand"
          Whitespace@128..129 " "
          Ascii61@129..130 "="
          Whitespace@130..131 " "
          ColumnRef@131..141
            Ident@131..132 "a"
            Ascii46@132..133 "."
            Ident@133..141 "thousand"
    Newline@141..142 "\n"
    Whitespace@142..144 "  "
    Join@144..148 "join"
    Whitespace@148..149 " "
    RangeVar@149..157
      Ident@149..157 "int4_tbl"
    Whitespace@157..158 " "
    On@158..160 "on"
    Whitespace@160..161 " "
    AExpr@161..176
      ColumnRef@161..171
        Ident@161..162 "b"
        Ascii46@162..163 "."
        Ident@163..171 "thousand"
      Whitespace@171..172 " "
      Ascii61@172..173 "="
      Whitespace@173..174 " "
      ColumnRef@174..176
        Ident@174..176 "f1"
  Ascii59@176..177 ";"

